correçao desing + alteração botao faacebook

--- a/fim.html
+++ b/fim.html
@@ -97,7 +97,7 @@
             </div>
     </div>
     
-<!--Menu modal que só aparece quando o botao-menu-modal é clicado, funcionando e aparecendo-->
+<!--Menu modal que só aparece quando o botao-menu-modal é clicado-->
 <div id="menu-modal" class="menu-mobile">
     <ul class="list-modal">
          <li>
@@ -115,6 +115,7 @@
             <div>
             </a>
         </li>
+        <li><div class="espaco-1"></div></li>
          <li>
             <a href="sobre-o-jogo.html">
             <div class= "elem-menu-modal">
@@ -123,7 +124,7 @@
             <div>
             </a>
         </li>
-        <li><div class="espaco-6"></div></li>
+        <li><div class="espaco-1"></div></li>
          <li>
             <a href="creditos.html">
             <div class= "elem-menu-modal">
@@ -132,7 +133,7 @@
             <div>
             </a>
         </li>
-         <li><div class="espaco-6"></div></li>
+         <li><div class="espaco-1"></div></li>
          <li>
             <a href="compartilhar.html">
             <div class= "elem-menu-modal">
@@ -142,7 +143,7 @@
             </a>
         </li>
     </ul>
-    <div class="espaco-6"></div>
+    <div class="espaco-3"></div>
     <div id="botao-voltar"><p> Voltar </p></div>
 </div>
        
