--- a/nivel.html
+++ b/nivel.html
@@ -111,6 +111,7 @@
             <div>
             </a>
         </li>
+        <li><div class="espaco-1"></div></li>
          <li>
             <a href="sobre-o-jogo.html">
             <div class= "elem-menu-modal">
@@ -119,6 +120,7 @@
             <div>
             </a>
         </li>
+        <li><div class="espaco-1"></div></li>
          <li>
             <a href="creditos.html">
             <div class= "elem-menu-modal">
@@ -127,6 +129,7 @@
             <div>
             </a>
         </li>
+         <li><div class="espaco-1"></div></li>
          <li>
             <a href="compartilhar.html">
             <div class= "elem-menu-modal">
