--- a/sobre-o-jogo.html
+++ b/sobre-o-jogo.html
@@ -21,7 +21,7 @@
      <div class="menu-desktop">
         <ul class="menu-desktop tipoUL">
         <li class = "espaco-6 menu-desktop"></li>
-        <li> <!--Colocar o logo no centro-->
+        <li> 
             <a class="menu-desktop" href="index.html"> 
                 <img class="logo-eic-centro menu-desktop" src="assets/img/logo-eic-branco.png">
             </a>
@@ -96,7 +96,7 @@
             </div>
     </div>
     
-<!--Menu modal que só aparece quando o botao-menu-modal é clicado, funcionando e aparecendo-->
+<!--Menu modal que só aparece quando o botao-menu-modal é clicado-->
 <div id="menu-modal" class="menu-mobile">
     <ul class="list-modal">
          <li>
@@ -114,6 +114,7 @@
             <div>
             </a>
         </li>
+        <li><div class="espaco-1"></div></li>
          <li>
             <a href="sobre-o-jogo.html">
             <div class= "elem-menu-modal">
@@ -122,7 +123,7 @@
             <div>
             </a>
         </li>
-        <li><div class="espaco-6"></div></li>
+        <li><div class="espaco-1"></div></li>
          <li>
             <a href="creditos.html">
             <div class= "elem-menu-modal">
@@ -131,7 +132,7 @@
             <div>
             </a>
         </li>
-         <li><div class="espaco-6"></div></li>
+         <li><div class="espaco-1"></div></li>
          <li>
             <a href="compartilhar.html">
             <div class= "elem-menu-modal">
@@ -141,7 +142,7 @@
             </a>
         </li>
     </ul>
-    <div class="espaco-6"></div>
+    <div class="espaco-3"></div>
     <div id="botao-voltar"><p> Voltar </p></div>
 </div>
 
