--- a/vitoria.html
+++ b/vitoria.html
@@ -98,7 +98,7 @@
             </div>
     </div>
     
-<!--Menu modal que só aparece quando o botao-menu-modal é clicado, funcionando e aparecendo-->
+<!--Menu modal que só aparece quando o botao-menu-modal é clicado-->
 <div id="menu-modal" class="menu-mobile">
     <ul class="list-modal">
          <li>
@@ -116,6 +116,7 @@
             <div>
             </a>
         </li>
+        <li><div class="espaco-1"></div></li>
          <li>
             <a href="sobre-o-jogo.html">
             <div class= "elem-menu-modal">
@@ -124,7 +125,7 @@
             <div>
             </a>
         </li>
-        <li><div class="espaco-6"></div></li>
+        <li><div class="espaco-1"></div></li>
          <li>
             <a href="creditos.html">
             <div class= "elem-menu-modal">
@@ -133,7 +134,7 @@
             <div>
             </a>
         </li>
-         <li><div class="espaco-6"></div></li>
+         <li><div class="espaco-1"></div></li>
          <li>
             <a href="compartilhar.html">
             <div class= "elem-menu-modal">
@@ -143,7 +144,7 @@
             </a>
         </li>
     </ul>
-    <div class="espaco-6"></div>
+    <div class="espaco-3"></div>
     <div id="botao-voltar"><p> Voltar </p></div>
 </div>
 
