--- a/fb-compartilhar.html
+++ b/fb-compartilhar.html
@@ -202,10 +202,17 @@ nonce="n77VsXlQ"></script>
     <div class="espaco-1"></div>
     <!--Arrumar links -->
 
-    <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" 
-    data-layout="button" data-size="large"><a target="_blank"
+    <div 
+   
+    data-href="https://developers.facebook.com/docs/plugins/" 
+    data-layout="button" data-size="large"
+    >
+    <a target="_blank"
      href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse" 
-    class="fb-xfbml-parse-ignore">Compartilhar</a></div>
+    class="fb-xfbml-parse-ignore">
+        Compartilhar
+    </a>
+    </div>
     <div class="espaco-1"></div>
    
     <div class="display-center">
