--- a/instrucoes.html
+++ b/instrucoes.html
@@ -24,7 +24,7 @@
        <div class="menu-desktop">
         <ul class="menu-desktop tipoUL">
         <li class = "espaco-6 menu-desktop"></li>
-        <li> <!--Colocar o logo no centro-->
+        <li> 
             <a class="menu-desktop" href="index.html"> 
                 <img class="logo-eic-centro menu-desktop" src="assets/img/logo-eic-branco.png">
             </a>
@@ -78,10 +78,9 @@
 
         <div class="row menu-mobile">
 
-        <!-- lembrar de mudar o link de voltar dependendo da pagina atual-->
             <div class="col menu-mobile">
                 <div id="btn-voltar-m">
-                    <a class = "menu-mobile"> 
+                    <a class = "menu-mobile"  href="index.html"> 
                         <img class="nav-elem menu-mobile" src="assets/img/nav/voltar.svg">
                     </a>
                 </div>
