--- a/jogo.html
+++ b/jogo.html
@@ -78,7 +78,6 @@
 
         <div class="row menu-mobile">
 
-        <!-- lembrar de mudar o link de voltar dependendo da pagina atual-->
             <div class="col menu-mobile">
                 <div id="btn-voltar-m">
                     <a class = "menu-mobile"> 
@@ -99,7 +98,7 @@
             </div>
     </div>
     
-<!--Menu modal que só aparece quando o botao-menu-modal é clicado, funcionando e aparecendo-->
+<!--Menu modal que só aparece quando o botao-menu-modal é clicado-->
 <div id="menu-modal" class="menu-mobile">
     <ul class="list-modal">
          <li>
