--- a/vitoria.html
+++ b/vitoria.html
@@ -77,10 +77,9 @@
 
         <div class="row menu-mobile">
 
-        <!-- lembrar de mudar o link de voltar dependendo da pagina atual-->
             <div class="col menu-mobile">
                 <div id="btn-voltar-m">
-                    <a class = "menu-mobile"> 
+                    <a class = "menu-mobile"  href="index.html"> 
                         <img class="nav-elem menu-mobile" src="assets/img/nav/voltar.svg">
                     </a>
                 </div>
