--- a/creditos.html
+++ b/creditos.html
@@ -78,7 +78,7 @@
         <!-- lembrar de mudar o link de voltar dependendo da pagina atual-->
             <div class="col menu-mobile">
                 <div id="btn-voltar-m">
-                    <a class = "menu-mobile"> 
+                    <a class = "menu-mobile"  href="index.html"> 
                         <img class="nav-elem menu-mobile" src="assets/img/nav/voltar.svg">
                     </a>
                 </div>
