--- a/instrucoes.html
+++ b/instrucoes.html
@@ -52,7 +52,7 @@
         </li>
         <li class="menu-desktop espaco-2"></li>
         <li>
-            <a class="menu-desktop" href="index.html">
+            <a class="menu-desktop" href="creditos.html">
             <div class="menu-desktop elem-menu-lateral">
             <img class="menu-desktop" src="assets/img/creditos.svg">
             <p class="menu-desktop"> Créditos <p> 
