"Correções apontadas pelos testes"

--- a/jogo.html
+++ b/jogo.html
@@ -158,32 +158,34 @@
         </div>
     </div>
 
+
+
+<!-- Fim opção sair --> 
 <!-- Opção sair - fazer o css  -->
 <div id="modal-sair">
-    <div class="btn-close" id="fechar"></div>
-    <div class="espaco-1"></div>
+    <div class="btn-close cursor-pointer" id="fechar"></div>
+    <div class="espaco-3"></div>
     <div class="modal-exclamacao"></div>
-    <div class="espaco-6"></div>
-    <div class="espaco-6"></div>
+    <div class="espaco-3"></div>
     <h1 class="fonte-modal-sair-destaque"> Sair do jogo </h1> 
-    <div class="espaco-1"></div>
+    <div class="espaco-2"></div>
     <h1 class="fonte-modal-sair"> Tem certeza que deseja sair do jogo </h1>
+    <div class="espaco-2"></div>
     <div class="row">
-        <div class="col" id="sair"> SIM </div>
-        <div class="col" id="ficar"> NÂO </div>
+        <div class="col" id=""></div>
+        <div class="col" id=""></div>
+        <div class="col cursor-pointer" id="ficar"> NÃO </div>
+        <div class="col cursor-pointer" id="sair"> SIM </div>
     </div>
-</div>
+</div>  
 
-<!-- Fim opção sair -->   
-
-    <div class="subtitulo-2" id="titulo-jogo">TEMPO</div>
+    <div class="subtitulo-2" id="titulo-jogo">MEMORIZE AS POSIÇÕES</div>
 
     <div class="espaco-1"></div>
-    <p class="largura-texto"> Observe os cartões e memorize as posições! </p>
   
 <!-- Painel ensinando como jogar -->
 
-<div id="container"> 
+<div id="container" class=""> 
 
     <div class="card" id="card0">
         <div class="face back">  </div>
@@ -256,7 +258,7 @@
 
     <!--display de pontos -->
     <div class="points-position-game">
-        <div class="points-box">
+        <div id="points-box" class="points-box hide-points-box">
             <img  class="medal" src="assets/img/medalha.svg">
             <p id="points" class="points"> 000 </p>
             <!--Arrumar aqui para o texto e a imagem ficarem alinhados-->
