--- a/vitoria.html
+++ b/vitoria.html
@@ -153,9 +153,9 @@
         <img src="assets/img/trofeu.png">
         </div>
         <div class="espaco-3"></div>
-        <div class="titulo">VOCÊ GANHOU!</div>
+        <div class="titulo-vitoria">VOCÊ GANHOU!</div>
         <div class="espaco-1"></div>
-        <div class="subtitulo-t">Sua pontuação nessa fase foi: </div>
+        <div class="subtitulo-vitoria">Sua pontuação nessa fase foi: </div>
         <div class="espaco-3"></div>
 
         <!-- Fazer os botoes responsivos, ficar um cada linha quando diminuir a tela -->
