--- a/fim.html
+++ b/fim.html
@@ -160,7 +160,7 @@
            <div class="display-center">
             <div id="points-box" class="points-box">
                 <img  class="medal" src="assets/img/medalha.svg">
-                <p id="points" class="points">   300 </p>
+                <p id="final-score" class="points">  300 </p>
                 <!--Arrumar aqui para o texto e a imagem ficarem alinhados-->
             </div>
         </div>
@@ -189,6 +189,7 @@
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/menu-modal.js"></script>
     <script src="assets/js/level.js"></script>
+     <script src="assets/js/fim.js"></script>
     
     
 </body>
