--- a/vitoria.html
+++ b/vitoria.html
@@ -180,6 +180,10 @@
         </div>
     </div>
 
+    <p id="points-fase1" class="score">0</p>
+    <p id="points-fase2" class="score">0</p>
+    <p id="points-fase3" class="score">0</p>
+
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/vitoria.js"></script>
