Função mostrar pontuação - corrigida

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <img src="assets/img/cards-img.png" class="cards-inicial">
     <div class="espaco-3"></div>
     <div class="row">
-        <div class="col"><a class="btn btn-primary" href="instrucoes.html"> INICIAR </a></div>
+        <div class="col"><a class="btn btn-primary" href="nivel.html"> INICIAR </a></div>
     </div>
     <div class="espaco-2"></div>
 
