--- a/instrucoes.html
+++ b/instrucoes.html
@@ -174,10 +174,8 @@
        
         
          <div class="col">
-            <a class="btn btn-primary btn-dificil 1"  id="nextPage"> PRÓXIMO </a>  
+            <a class="btn btn-primary btn-dificil 1"  id="nextPage"> JOGAR </a>  
         </div>
-  
-
 
     </div>
 
