--- a/fim.html
+++ b/fim.html
@@ -187,6 +187,7 @@
 
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
     <script src="assets/js/menu-modal.js"></script>
     <script src="assets/js/level.js"></script>
      <script src="assets/js/fim.js"></script>
