--- a/vitoria.html
+++ b/vitoria.html
@@ -186,6 +186,7 @@
 
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
     <script src="assets/js/vitoria.js"></script>
     <script src="assets/js/menu-modal.js"></script>
     
