--- a/sobre-o-jogo.html
+++ b/sobre-o-jogo.html
@@ -146,12 +146,23 @@
 
     <!--fim menu mobile-->
     <!-- Conteúdo da página -->
-        <div class="espaco-6"> </div>
-
+        <div class="espaco-3"> </div>
         <h1 class="subtitulo-2">SOBRE O JOGO</h1>
-        <div class="espaco-6"></div>
-        <p class="largura-texto"> O jogo da memória Doença de Chagas é composto por 3 fases </p>
-        <div class="espaco-6"></div>
+        <div class="espaco-3"></div>
+        <p class="largura-texto destaque"> Que tal aprender sobre a Doença de Chagas jogando? </p>
+        <div class="espaco-3"></div>
+        <div class="destaque-sobre">
+            <p> O jogo da memória é composto por três fases com grau de dificuldade crescente.</p>
+            <ul>
+                <li><h1 class="destaque-sobre"> Fase 1: </h1> Você terá que associar uma imagem com a sua semelhante.</li>
+                <li></li>
+                <li><p class="destaque-sobre"> Fase 2: </p>  Associar uma imagem com o seu nome. </li>
+                <li></li>
+                <li><p class="destaque-sobre"> Fase 3: </p> Associar uma imagem com o seu significado.</p></li>
+            <ul>
+        <div>
+        <div class="espaco-3"></div>
+        <p class="destaque"> Desafie-se e aprenda mais!</p>
 
     </div>
      </div>
