--- a/instrucoes.html
+++ b/instrucoes.html
@@ -174,7 +174,7 @@
        
         
          <div class="col">
-            <a class="btn btn-primary btn-dificil 1"  id="nextPage"> JOGAR </a>  
+            <a class="btn btn-primary btn-dificil 1" id="PlayGame" href="jogo.html"> JOGAR </a>  
         </div>
 
     </div>
