--- a/nivel.html
+++ b/nivel.html
@@ -153,14 +153,14 @@
     <div class="espaco-6"></div>
 
         <div class="row">
-            <div class="col"><a class="btn btn-primary btn-facil 1" id ="facil" href="jogo.html" onclick="fase(this.id, classList[3])"> FÁCIL </a> </div>
+            <div class="col"><a class="btn btn-primary btn-facil 1" id ="facil" href="instrucoes.html" onclick="fase(this.id, classList[3])"> FÁCIL </a> </div>
         </div>
 
         <div class="espaco-6"></div>
 
         <div class="row">
             <div class="col">
-                <a class="btn btn-primary btn-medio 1" id="medio" href="jogo.html"  onclick="fase(this.id, classList[3])"> MÉDIO  </a>
+                <a class="btn btn-primary btn-medio 1" id="medio" href="instrucoes.html"  onclick="fase(this.id, classList[3])"> MÉDIO  </a>
             </div>
         </div>
 
@@ -168,7 +168,7 @@
 
         <div class="row">
             <div class="col">
-            <a class="btn btn-primary btn-dificil 1" id="dificil" href="jogo.html"  onclick="fase(this.id, classList[3])"> DÍFICIL </a>
+            <a class="btn btn-primary btn-dificil 1" id="dificil" href="instrucoes.html"  onclick="fase(this.id, classList[3])"> DÍFICIL </a>
             </div>
         </div>
 
