--- a/vitoria.html
+++ b/vitoria.html
@@ -175,7 +175,7 @@
             </div>
             <div class="col-lg-2"></div>
             <div class="col-lg-5">
-                    <a class="btn btn-primary btn-next" href="jogo.html" id="next" onclick="fase(this.classList[3], this.classList[4])" > PRÓXIMA FASE  </a> 
+                    <a class="btn btn-primary btn-next" href="instrucoes.html" id="next" onclick="fase(this.classList[3], this.classList[4])" > PRÓXIMA FASE  </a> 
             </div>
         </div>
     </div>
