Correções - problemas apontados pelos testes

--- a/compartilhar.html
+++ b/compartilhar.html
@@ -80,8 +80,7 @@
     <div class="espaco-1"></div>
     <div class="menu-mobile">
 
-        <div class="row menu-mobile">
-
+        <div class="row menu-mobile">t
         <!-- lembrar de mudar o link de voltar dependendo da pagina atual-->
             <div class="col menu-mobile">
                 <div id="btn-voltar-m"  href="index.html">
