--- a/nivel.html
+++ b/nivel.html
@@ -65,6 +65,7 @@
         </li>
         </ul>
     </div>
+    <!--Fim menu desktop -->
 
     <div class="fundo">
 <!-- menu mobile- colocar nas outras paginas-->
