--- a/sobre-o-jogo.html
+++ b/sobre-o-jogo.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="assets/css/nivel.css">
     <link rel="stylesheet" href="assets/css/menu-modal.css">
     <link rel="stylesheet" href="assets/css/menu-desktop.css">
+    <link rel="stylesheet" href="assets/css/sobre-o-jogo.css">
+    
     
 </head>
 
@@ -72,7 +74,6 @@
 <!-- menu mobile-->
     <div class="espaco-1"></div>
     <div class="menu-mobile">
-
         <div class="row menu-mobile">
             <div class="col menu-mobile">
                 <div id="btn-voltar-m">
@@ -140,7 +141,7 @@
             </a>
         </li>
     </ul>
-    <div class="espaco-3"></div>
+    <div class="espaco-3 menu-desktop"></div>
     <div id="botao-voltar"><p> Voltar </p></div>
 </div>
 
@@ -154,11 +155,11 @@
         <div class="destaque-sobre">
             <p> O jogo da memória é composto por três fases com grau de dificuldade crescente.</p>
             <ul>
-                <li><h1 class="destaque-sobre"> Fase 1: </h1> Você terá que associar uma imagem com a sua semelhante.</li>
-                <li></li>
-                <li><p class="destaque-sobre"> Fase 2: </p>  Associar uma imagem com o seu nome. </li>
-                <li></li>
-                <li><p class="destaque-sobre"> Fase 3: </p> Associar uma imagem com o seu significado.</p></li>
+                <li class="list-sobre"><h1 class="destaque-sobre"> Fase 1: </h1> Você terá que associar uma imagem com a sua semelhante.</li>
+                <li class="list-hide-sobre"></li>
+                <li class="list-sobre"><p class="destaque-sobre"> Fase 2: </p>  Associar uma imagem com o seu nome. </li>
+                <li class="list-hide-sobre"></li>
+                <li class="list-sobre"><p class="destaque-sobre"> Fase 3: </p> Associar uma imagem com o seu significado.</p></li>
             <ul>
         <div>
         <div class="espaco-3"></div>
