--- a/instrucoes.html
+++ b/instrucoes.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Luckiest+Guy">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/nivel.css">
+     <link rel="stylesheet" href="assets/css/menu-desktop.css">
     <link rel="stylesheet" href="assets/css/jogo.css">
     <link rel="stylesheet" href="assets/css/menu-modal.css">
-    <link rel="stylesheet" href="assets/css/menu-desktop.css">
     <link rel="stylesheet" href="assets/css/vitoria.css">
     <link rel="stylesheet" href="assets/css/instrucoes.css">
 
@@ -21,10 +21,10 @@
 
 <body>
       <!-- menu Desktop -->
-       <div class="menu-desktop">
+         <div class="menu-desktop">
         <ul class="menu-desktop tipoUL">
         <li class = "espaco-6 menu-desktop"></li>
-        <li> 
+        <li> <!--Colocar o logo no centro-->
             <a class="menu-desktop" href="index.html"> 
                 <img class="logo-eic-centro menu-desktop" src="assets/img/logo-eic-branco.png">
             </a>
@@ -70,6 +70,7 @@
         </li>
         </ul>
     </div>
+    <!--Fim menu desktop -->
 
     <div class="fundo">
 <!-- menu mobile-->
