--- a/vitoria.html
+++ b/vitoria.html
@@ -169,12 +169,12 @@
 
         <div class="espaco-3"></div>
 
-        <div class="row" id ="DispBtns">
-            <div class="col-lg-5">
+        <div class="row display-center" id ="DispBtns">
+            <div class="col-lg-3">
                     <a class="btn btn-primary btn-playAgain" href="jogo.html" id="again" onclick="fase(this.classList[3], this.classList[4])" > REFAZER FASE  </a>  
             </div>
             <div class="col-lg-2"></div>
-            <div class="col-lg-5">
+            <div class="col-lg-3">
                     <a class="btn btn-primary btn-next" href="instrucoes.html" id="next" onclick="fase(this.classList[3], this.classList[4])" > PRÓXIMA FASE  </a> 
             </div>
         </div>
