Alterações apontadas pelos testes

--- a/creditos.html
+++ b/creditos.html
@@ -70,27 +70,29 @@
 
     <div class="fundo">
          <!-- menu mobile-->
-    <div class="espaco-1"></div>
+    <div class="espaco-2"></div>
     <div class="menu-mobile">
 
         <div class="row menu-mobile">
 
         <!-- lembrar de mudar o link de voltar dependendo da pagina atual-->
-            <div class="col menu-mobile">
+            <div class="col menu-mobile col-lg-2 ajuste-direita">
                 <div id="btn-voltar-m">
                     <a class = "menu-mobile"  href="index.html"> 
-                        <img class="nav-elem menu-mobile" src="assets/img/nav/voltar.svg">
+                        <img class="nav-elem menu-mobile"  id="logo-nav-sup-desktop" src="assets/img/nav/voltar.svg">
                     </a>
                 </div>
             </div>
-            <div class="col menu-mobile">
-                <a class="menu-mobile" href="index.html"> 
-                    <img class="nav-elem menu-mobile" src="assets/img/nav/logo-eic-nav.svg">
+            <div class="col menu-mobile col-lg-1"></div>
+            <div class="col menu-mobile col-lg-6">
+                <a class="menu-mobile"  href="index.html"> 
+                    <img class="nav-elem menu-mobile" id="logo-eic-nav-sup-desktop" src="assets/img/nav/logo-eic-nav.svg">
                 </a>
             </div>
-            <div class="col menu-mobile">
+            <div class="col menu-mobile col-lg-1"></div>
+            <div class="col menu-mobile col-lg-2 ajuste-esquerda">
                 <a class="menu-mobile" id="botao-menu-modal"> 
-                    <img class="nav-elem" src="assets/img/nav/menu.svg">
+                    <img class="nav-elem"  id="logo-nav-sup-desktop" src="assets/img/nav/menu.svg">
                 </a>
             </div>
             </div>
