--- a/sobre-o-jogo.html
+++ b/sobre-o-jogo.html
@@ -69,7 +69,6 @@
         </li>
         </ul>
     </div>
-
     <div class="fundo">
 <!-- menu mobile-->
     <div class="espaco-1"></div>
@@ -155,12 +154,14 @@
         <div class="destaque-sobre">
             <p> O jogo da memória é composto por três fases com grau de dificuldade crescente.</p>
             <ul>
-                <li class="list-sobre"><h1 class="destaque-sobre"> Fase 1: </h1> Você terá que associar uma imagem com a sua semelhante.</li>
+            <div class="box-instrucoes-sobre">
+                <li class="list-sobre"><p> <span class="destaque-sobre"> Fase 1: </span> Você terá que associar uma imagem com a sua semelhante.</p></li>
                 <li class="list-hide-sobre"></li>
-                <li class="list-sobre"><p class="destaque-sobre"> Fase 2: </p>  Associar uma imagem com o seu nome. </li>
+                <li class="list-sobre"><p><span class="destaque-sobre">  Fase 2: </span>  Associar uma imagem com o seu nome. </p></li>
                 <li class="list-hide-sobre"></li>
-                <li class="list-sobre"><p class="destaque-sobre"> Fase 3: </p> Associar uma imagem com o seu significado.</p></li>
-            <ul>
+                <li class="list-sobre"><p> <span class="destaque-sobre"> Fase 3: </span> Associar uma imagem com o seu significado.</p></li>
+            </div>
+            </ul>
         <div>
         <div class="espaco-3"></div>
         <p class="destaque"> Desafie-se e aprenda mais!</p>
