--- a/creditos.html
+++ b/creditos.html
@@ -50,7 +50,7 @@
         <li class="menu-desktop espaco-2"></li>
         <li>
             <a class="menu-desktop" href="creditos.html">
-            <div class="menu-desktop elem-menu-lateral">
+            <div class="menu-desktop active elem-menu-lateral">
             <img class="menu-desktop" src="assets/img/creditos.svg">
             <p class="menu-desktop"> Créditos <p> 
             <div>
