--- a/sobre-o-jogo.html
+++ b/sobre-o-jogo.html
@@ -43,7 +43,7 @@
         <li class = "menu-desktop espaco-2"></li>
         <li>
             <a  class="menu-desktop" href="sobre-o-jogo.html">
-            <div class=" menu-desktop elem-menu-lateral">
+            <div class=" menu-desktop elem-menu-lateral active">
             <img  class="menu-desktop" src="assets/img/sobre-o-jogo.svg">
             <p class="menu-desktop"> Sobre o jogo <p> 
             <div>
