--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="espaco-2"></div>
     <div class="subtitulo-t">Doença de chagas</div>
     <div class="espaco-2"></div>
-    <img src="assets/img/cards-img.png" class="cards-inicial">
+    <img src="assets/img/cards-img.svg" class="cards-inicial">
     <div class="espaco-3"></div>
     <div class="row">
         <div class="col"><a class="btn btn-primary" href="nivel.html"> INICIAR </a></div>
@@ -47,7 +47,7 @@
     <div class="espaco-3"></div>
     <div class="espaco-3"></div>
 
-    <img class = "logo-eic" src="assets/img/logo-eic-branco.png">
+    <img class = "logo-eic-index" src="assets/img/logo-eic.svg">
     </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
