correções do dia

--- a/creditos.html
+++ b/creditos.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Sobre o jogo - Jogo da memória</title>
+    <title>Créditos - Jogo da memória</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Sans">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Luckiest+Guy">
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="assets/css/nivel.css">
     <link rel="stylesheet" href="assets/css/menu-modal.css">
     <link rel="stylesheet" href="assets/css/menu-desktop.css">
+    <link rel="stylesheet" href="assets/css/creditos.css">
     
 </head>
 
@@ -154,23 +155,105 @@
 
     <h1 class="subtitulo-2">CRÉDITOS</h1>
     <div class="espaco-3"></div>
+    <!--Mostrar no desktop-->
+    <div class="menu-desktop">
+    <div class="espaco-3"></div>
+    <div class="row">
+    <div class="col col-lg-2"></div>
+        <div class="col col-lg-5">
+            <div class="row">
+                <p class="destaque">COORDENAÇÃO GERAL </p>
+            </div>
+            <div class="row">
+                <p class="creditos"> Leila M. Beltramini </p>
+            </div>
+            <div class="espaco-1-5"></div>
+            <div class="row">
+                <p class="destaque">SUPERVISÃO </p>
+            </div>
+            <div class="row">
+                <p class="creditos"> Nelma R. S. Bossolan </p>
+            </div>
+            <div class="espaco-1-5"></div>
+             <div class="row">
+                <p class="destaque">EDUCADORA </p>
+            </div>
+            <div class="row">
+                <p class="creditos">Gislaine Costa dos Santos </p>
+            </div>
+            <div class="espaco-1-5"></div>
+             <div class="row">
+                <p class="destaque">GESTÃO DO PROJETO </p>
+            </div>
+            <div class="row">
+                <p class="creditos">Simone Ferreira Souza (versão 2.0)</p>
+            </div>
+        </div>
+        <div class="col col col-lg-5">
+           <div class="row">
+                <p class="destaque">DESENVOLVIMENTO DO SOFTWARE </p>
+            </div>
+             <div class="row">
+                <p class="creditos">Claudinei Caetano de Souza (versão 1.0)</p>
+            </div>
+             <div class="row">
+                <p class="creditos">Ana Luiza Martins Cesario (versão 2.0)</p>
+            </div>
+            <div class="espaco-1-5"></div>
+             <div class="row">
+                <p class="destaque">CONTEÚDO </p>
+            </div>
+            <div class="row">
+                <p class="creditos"> Marilia Faustino </p>
+            </div>
+            <div class="espaco-1-5"></div>
+             <div class="row">
+                <p class="destaque">DESING DE INTERFACE </p>
+            </div>
+            <div class="row">
+                <p class="creditos"> Marilia Faustino (versão 1.0)</p>
+            </div>
+             <div class="row">
+                <p class="creditos">Simone Ferreira Souza (versão 2.0)</p>
+            </div>
+            <div class="espaco-1-5"></div>
+             <div class="row">
+                <p class="destaque"> Arte</p>
+            </div>
+             <div class="row">
+                <p class="creditos">imagem do troféu by flaticon.com</p>
+            </div>
+        </div>
+    </div>
+    <!--Mostrar no mobile-->
+    <div class="menu-mobile">
+        <p class="destaque">COORDENAÇÃO GERAL </p>
+        <p class="creditos"> Leila M. Beltramini </p>
+        <div class="espaco-1-5"></div>
+        <p class="destaque">SUPERVISÃO </p>
+        <p class="creditos"> Nelma R. S. Bossolan </p>
+        <div class="espaco-1-5"></div>
+        <p class="destaque">EDUCADORA </p>
+        <p class="creditos"> Gislaine Costa dos Santos </p>
+        <div class="espaco-1-5"></div>
+         <p class="destaque">GESTÃO DO PROJETO </p>
+        <p class="creditos"> Simone F. Souza (versão 2.0) </p>
+        <div class="espaco-1-5"></div>
+        <p class="destaque">DESENVOLVIMENTO DO SOFTWARE </p>
+        <p class="creditos"> Claudinei Caetano de Souza (versão 1.0) </p>
+        <p class="creditos"> Ana Luiza Martins Cesario (versão 2.0) </p>
+        <div class="espaco-1-5"></div>
+        <p class="destaque">CONTEÚDO </p>
+        <p class="creditos"> Marilia Faustino </p>
+        <div class="espaco-1-5"></div>
+        <p class="destaque">DESING DE INTERFACE </p>
+        <p class="creditos"> Marilia Faustino (versão 1.0) </p>
+        <p class="creditos"> Simone F. Souza (versão 2.0) </p>
+        <div class="espaco-1-5"></div>
+        <p class="destaque"> Arte </p>
+        <p class="creditos"> imagem do troféu by flaticon.com </p>
+  
 
-    <p class="destaque">COORDENAÇÃO GERAL </p>
-    <p> Leila M. Beltramini </p>
-    <div class="espaco-2"></div>
-     <p class="destaque">SUPERVISÃO </p>
-    <p> Nelma R. S. Bossolan </p>
-    <div class="espaco-2"></div>
-     <p class="destaque">DESENVOLVIMENTO DO SOFTWARE </p>
-    <p> Claudinei Caetano de Souza (versão 1.0) </p>
-    <p> Ana Luiza Martins Cesario (versão 2.0) </p>
-    <div class="espaco-2"></div>
-     <p class="destaque">CONTEÚDO </p>
-    <p> Marilia Faustino </p>
-    <div class="espaco-2"></div>
-    <p class="destaque">DESING DE INTERFACE </p>
-    <p> Marilia Faustino (versão 1.0) </p>
-    <p> Simone F. Souza (versão 2.0) </p>
     </div>
 
      
