--- a/creditos.html
+++ b/creditos.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Créditos - Jogo da memória</title>
+    <title> Créditos - Jogo da memória </title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Sans">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Luckiest+Guy">
@@ -69,10 +69,11 @@
         </ul>
     </div>
 
-    <div class="fundo">
+    <div class="fundo-creditos">
          <!-- menu mobile-->
-    <div class="espaco-2"></div>
-    <div class="menu-mobile">
+        <div class="espaco-2"></div>
+        <div class="menu-mobile menu-mobile-fixed">
+         <div class="menu-mobile">
 
         <div class="row menu-mobile">
 
@@ -98,70 +99,72 @@
             </div>
             </div>
     </div>
+    </div>
     
-<!--Menu modal que só aparece quando o botao-menu-modal é clicado-->
-<div id="menu-modal" class="menu-mobile">
-    <ul class="list-modal">
-         <li>
-            <a href="index.html">
-            <div class= "logo-modal">
-            <img class="tamanho-logo-modal" src="assets/img/logo-eic-branco.png">
-            <div>
-            </a>
-        </li>
-        <li>
-            <a href="index.html">
-            <div class= "elem-menu-modal">
-            <img class="tamanho-img-modal" src="assets/img/home.svg">
-            <p> Início <p> 
-            <div>
-            </a>
-        </li>
-        <li><div class="espaco-1"></div></li>
-         <li>
-            <a href="sobre-o-jogo.html">
-            <div class= "elem-menu-modal">
-            <img class="tamanho-img-modal" src="assets/img/sobre-o-jogo.svg">
-            <p> Sobre o Jogo <p> 
-            <div>
-            </a>
-        </li>
-        <li><div class="espaco-1"></div></li>
-         <li>
-            <a href="creditos.html">
-            <div class= "elem-menu-modal">
-            <img class="tamanho-img-modal" src="assets/img/creditos.svg">
-            <p> Créditos <p> 
-            <div>
-            </a>
-        </li>
-         <li><div class="espaco-1"></div></li>
-         <li>
-            <a href="compartilhar.html">
-            <div class= "elem-menu-modal">
-            <img class="tamanho-img-modal" src="assets/img/compartilhar.svg">
-            <p> Compartilhar <p> 
-            <div>
-            </a>
-        </li>
-    </ul>
-    <div class="espaco-3"></div>
-    <div id="botao-voltar"><p> Voltar </p></div>
-</div>
+    <!--Menu modal que só aparece quando o botao-menu-modal é clicado-->
+    <div id="menu-modal" class="menu-mobile">
+        <ul class="list-modal">
+            <li>
+                <a href="index.html">
+                <div class= "logo-modal">
+                <img class="tamanho-logo-modal" src="assets/img/logo-eic-branco.png">
+                <div>
+                </a>
+            </li>
+            <li>
+                <a href="index.html">
+                <div class= "elem-menu-modal">
+                <img class="tamanho-img-modal" src="assets/img/home.svg">
+                <p> Início <p> 
+                <div>
+                </a>
+            </li>
+            <li><div class="espaco-1"></div></li>
+            <li>
+                <a href="sobre-o-jogo.html">
+                <div class= "elem-menu-modal">
+                <img class="tamanho-img-modal" src="assets/img/sobre-o-jogo.svg">
+                <p> Sobre o Jogo <p> 
+                <div>
+                </a>
+            </li>
+            <li><div class="espaco-1"></div></li>
+            <li>
+                <a href="creditos.html">
+                <div class= "elem-menu-modal">
+                <img class="tamanho-img-modal" src="assets/img/creditos.svg">
+                <p> Créditos <p> 
+                <div>
+                </a>
+            </li>
+            <li><div class="espaco-1"></div></li>
+            <li>
+                <a href="compartilhar.html">
+                <div class= "elem-menu-modal">
+                <img class="tamanho-img-modal" src="assets/img/compartilhar.svg">
+                <p> Compartilhar <p> 
+                <div>
+                </a>
+            </li>
+        </ul>
+        <div class="espaco-3"></div>
+        <div id="botao-voltar"><p> Voltar </p></div>
+    </div>
 
 <!--fim menu mobile-->
 <!-- Conteúdo da página -->
     <div class="espaco-3"> </div>
 
-    <h1 class="subtitulo-2">CRÉDITOS</h1>
+    <h1 class="subtitulo-2 titulo subtitulo-cre">CRÉDITOS</h1>
     <div class="espaco-3"></div>
     <!--Mostrar no desktop-->
     <div class="menu-desktop">
     <div class="espaco-3"></div>
     <div class="row">
-    <div class="col col-lg-2"></div>
-        <div class="col col-lg-5">
+    <div class="col col-lg-1"></div>
+        <div class="col col-lg-4">
             <div class="row">
+                <!--Os titulos não estão ficando no centro como eu gostaria no desktop-->
                 <p class="destaque">COORDENAÇÃO GERAL </p>
             </div>
             <div class="row">
@@ -175,14 +178,14 @@
                 <p class="creditos"> Nelma R. S. Bossolan </p>
             </div>
             <div class="espaco-1-5"></div>
-             <div class="row">
+            <div class="row">
                 <p class="destaque">EDUCADORA </p>
             </div>
             <div class="row">
                 <p class="creditos">Gislaine Costa dos Santos </p>
             </div>
             <div class="espaco-1-5"></div>
-             <div class="row">
+            <div class="row">
                 <p class="destaque">GESTÃO DO PROJETO </p>
             </div>
             <div class="row">
@@ -190,68 +193,73 @@
             </div>
         </div>
         <div class="col col col-lg-5">
-           <div class="row">
+        <div class="row">
                 <p class="destaque">DESENVOLVIMENTO DO SOFTWARE </p>
             </div>
-             <div class="row">
+            <div class="row">
                 <p class="creditos">Claudinei Caetano de Souza (versão 1.0)</p>
             </div>
-             <div class="row">
+            <div class="row">
                 <p class="creditos">Ana Luiza Martins Cesario (versão 2.0)</p>
             </div>
             <div class="espaco-1-5"></div>
-             <div class="row">
+            <div class="row">
                 <p class="destaque">CONTEÚDO </p>
             </div>
             <div class="row">
                 <p class="creditos"> Marilia Faustino </p>
             </div>
             <div class="espaco-1-5"></div>
-             <div class="row">
+            <div class="row">
                 <p class="destaque">DESING DE INTERFACE </p>
             </div>
             <div class="row">
                 <p class="creditos"> Marilia Faustino (versão 1.0)</p>
             </div>
-             <div class="row">
+            <div class="row">
                 <p class="creditos">Simone Ferreira Souza (versão 2.0)</p>
             </div>
             <div class="espaco-1-5"></div>
-             <div class="row">
+            <div class="row">
                 <p class="destaque"> Arte</p>
             </div>
-             <div class="row">
+            <div class="row">
                 <p class="creditos">imagem do troféu by flaticon.com</p>
             </div>
         </div>
     </div>
-    <!--Mostrar no mobile-->
-    <div class="menu-mobile">
-        <p class="destaque">COORDENAÇÃO GERAL </p>
-        <p class="creditos"> Leila M. Beltramini </p>
-        <div class="espaco-1-5"></div>
-        <p class="destaque">SUPERVISÃO </p>
-        <p class="creditos"> Nelma R. S. Bossolan </p>
-        <div class="espaco-1-5"></div>
-        <p class="destaque">EDUCADORA </p>
-        <p class="creditos"> Gislaine Costa dos Santos </p>
-        <div class="espaco-1-5"></div>
-         <p class="destaque">GESTÃO DO PROJETO </p>
-        <p class="creditos"> Simone F. Souza (versão 2.0) </p>
-        <div class="espaco-1-5"></div>
-        <p class="destaque">DESENVOLVIMENTO DO SOFTWARE </p>
-        <p class="creditos"> Claudinei Caetano de Souza (versão 1.0) </p>
-        <p class="creditos"> Ana Luiza Martins Cesario (versão 2.0) </p>
-        <div class="espaco-1-5"></div>
-        <p class="destaque">CONTEÚDO </p>
-        <p class="creditos"> Marilia Faustino </p>
-        <div class="espaco-1-5"></div>
-        <p class="destaque">DESING DE INTERFACE </p>
-        <p class="creditos"> Marilia Faustino (versão 1.0) </p>
-        <p class="creditos"> Simone F. Souza (versão 2.0) </p>
-        <div class="espaco-1-5"></div>
-        <p class="destaque"> Arte </p>
-        <p class="creditos"> imagem do troféu by flaticon.com </p>
+    </div>
+ 
+        <!--Mostrar no mobile-->
+        <!--Não esta scrolando o conteudo-->
+        <div class="menu-mobile" id="creditos-mobile">
+
+            <p class="destaque">COORDENAÇÃO GERAL </p>
+            <p class="creditos"> Leila M. Beltramini </p>
+            <div class="espaco-1-5"></div>
+            <p class="destaque">SUPERVISÃO </p>
+            <p class="creditos"> Nelma R. S. Bossolan </p>
+            <div class="espaco-1-5"></div>
+            <p class="destaque">EDUCADORA </p>
+            <p class="creditos"> Gislaine Costa dos Santos </p>
+            <div class="espaco-1-5"></div>
+            <p class="destaque">GESTÃO DO PROJETO </p>
+            <p class="creditos"> Simone F. Souza (versão 2.0) </p>
+            <div class="espaco-1-5"></div>
+            <p class="destaque">DESENVOLVIMENTO DO SOFTWARE </p>
+            <p class="creditos"> Claudinei Caetano de Souza (versão 1.0) </p>
+            <p class="creditos"> Ana Luiza Martins Cesario (versão 2.0) </p>
+            <div class="espaco-1-5"></div>
+            <p class="destaque">CONTEÚDO </p>
+            <p class="creditos"> Marilia Faustino </p>
+            <div class="espaco-1-5"></div>
+            <p class="destaque">DESING DE INTERFACE </p>
+            <p class="creditos"> Marilia Faustino (versão 1.0) </p>
+            <p class="creditos"> Simone F. Souza (versão 2.0) </p>
+            <div class="espaco-1-5"></div>
+            <p class="destaque"> Arte </p>
+            <p class="creditos"> imagem do troféu by flaticon.com </p>
+    </div>
   
 
     </div>
