--- a/nivel.html
+++ b/nivel.html
@@ -71,7 +71,6 @@
 <!-- menu mobile- colocar nas outras paginas-->
    <div class="espaco-2"></div>
     <div class="menu-mobile">
-
         <div class="row menu-mobile">
 
         <!-- lembrar de mudar o link de voltar dependendo da pagina atual-->
@@ -99,6 +98,7 @@
     
 <!--Menu modal que só aparece quando o botao-menu-modal é clicado, funcionando e aparecendo-->
 <div id="menu-modal" class="menu-mobile">
+    <div class="touch-surface"> </div>
     <ul class="list-modal">
          <li>
             <a href="index.html">
@@ -144,7 +144,7 @@
         </li>
     </ul>
     <div class="espaco-3"></div>
-    <div id="botao-voltar"><p> Voltar </p></div>
+    <div class="fade-menu-mobile menu-mobile"></div>
 </div>
 
 <!--fim menu mobile-->
