--- a/compartilhar.html
+++ b/compartilhar.html
@@ -152,7 +152,7 @@
         </li>
     </ul>
     <div class="espaco-3"></div>
-    <div id="botao-voltar"><p> Voltar </p></div>
+    <div class="fade-menu-mobile menu-mobile"></div> 
 </div>
 
 <!--fim menu mobile-->
