--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
     <div class="espaco-3"></div>
     <div class="espaco-3"></div>
 
+    <div class="display-center">
     <img class = "logo-eic-index" src="assets/img/logo-eic.svg">
+    </div>
     </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
