--- a/sobre-o-jogo.html
+++ b/sobre-o-jogo.html
@@ -141,7 +141,7 @@
         </li>
     </ul>
     <div class="espaco-3 menu-desktop"></div>
-    <div id="botao-voltar"><p> Voltar </p></div>
+    <div class="fade-menu-mobile menu-mobile"></div> 
 </div>
 
     <!--fim menu mobile-->
