Correção botão voltar - desktop

--- a/compartilhar.html
+++ b/compartilhar.html
@@ -157,6 +157,15 @@
 
 <!--fim menu mobile-->
 
+<!--Btn voltar  superior - desktop-->
+<div class="espaco-1"> </div>
+    <div class="row menu-desktop">
+        <div id="btn-voltar-ms">
+        <img class="img-voltar" src="assets/img/nav/voltar.svg" href="index.html">
+        </div>
+    </div>
+    
+
 <!-- Conteúdo da página -->
     <div class="espaco-3"> </div>
 
