--- a/sobre-o-jogo.html
+++ b/sobre-o-jogo.html
@@ -143,8 +143,16 @@
     <div class="espaco-3 menu-desktop"></div>
     <div class="fade-menu-mobile menu-mobile"></div> 
 </div>
-
     <!--fim menu mobile-->
+
+    <!--Btn voltar  superior - desktop-->
+    <div class="espaco-1"> </div>
+        <div class="row menu-desktop">
+            <div id="btn-voltar-ms">
+            <img class="img-voltar" src="assets/img/nav/voltar.svg" href="index.html">
+            </div>
+        </div>
+
     <!-- Conteúdo da página -->
         <div class="espaco-3"> </div>
         <h1 class="subtitulo-2">SOBRE O JOGO</h1>
