--- a/nivel.html
+++ b/nivel.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="assets/css/nivel.css">
     <link rel="stylesheet" href="assets/css/menu-modal.css">
     <link rel="stylesheet" href="assets/css/menu-desktop.css">
+    <link rel="stylesheet" href="assets/css/jogo.css">
     
 </head>
 <!--Colar o novo menu desktop em todas as outras paginas-->
@@ -148,8 +149,18 @@
 </div>
 
 <!--fim menu mobile-->
+
+<!--Btn voltar  superior - desktop-->
+<div class="espaco-1"> </div>
+    <div class="row menu-desktop">
+        <div id="btn-voltar-ms">
+        <img class="img-voltar" src="assets/img/nav/voltar.svg" href="index.html">
+        </div>
+    </div>
+    
 <!-- Conteúdo da página -->
-    <div class="espaco-6"> </div>
+
+    <div class="espaco-3"> </div>
 
     <h1 class="subtitulo-2">ESCOLHA UM NÍVEL</h1>
     <div class="espaco-6"></div>
