correções - voltar menu superior

--- a/compartilhar.html
+++ b/compartilhar.html
@@ -77,7 +77,6 @@
 
     <div class="fundo">
 <!-- menu mobile-->
-   <div class="espaco-2"></div>
     <div class="menu-mobile">
 
         <div class="row menu-mobile">
@@ -158,7 +157,7 @@
 <!--fim menu mobile-->
 
 <!--Btn voltar  superior - desktop-->
-<div class="espaco-1"> </div>
+<div class="espaco-0-5"> </div>
     <div class="row menu-desktop">
         <div id="btn-voltar-ms">
         <img class="img-voltar" src="assets/img/nav/voltar.svg" href="index.html">
