--- a/jogo.html
+++ b/jogo.html
@@ -73,7 +73,7 @@
 
     <div class="fundo">
 <!-- menu mobile-->
-    <div class="espaco-2"></div>
+  <div class="espaco-0-5"> </div>
     <div class="menu-mobile">
 
         <div class="row menu-mobile">
@@ -152,19 +152,20 @@
 </div>
 
 <!--fim menu mobile-->
+
 <!-- Conteúdo da página -->
 
-    <div class="espaco-1"> </div>
+    <div class="espaco-0-5"> </div>
     <div class="row menu-desktop">
         <div id="btn-voltar-d">
-        <img class="img-voltar" src="assets/img/nav/voltar.svg">
+            <img class="img-voltar" src="assets/img/nav/voltar.svg">
         </div>
     </div>
 
 
 
 <!-- Fim opção sair --> 
-<!-- Opção sair - fazer o css  -->
+<!-- Opção sair - fazer o css - acho que ja ta feito - falta background  -->
 <div id="modal-sair">
     <div class="btn-close cursor-pointer" id="fechar"></div>
     <div class="espaco-3"></div>
@@ -181,7 +182,8 @@
         <div class="col cursor-pointer" id="sair"> SIM </div>
     </div>
 </div>  
-
+    
+    <div class="espaco-0-5"></div>
     <div class="subtitulo-2" id="titulo-jogo">MEMORIZE AS POSIÇÕES</div>
 
     <div class="espaco-1"></div>
