--- a/vitoria.html
+++ b/vitoria.html
@@ -72,7 +72,7 @@
 
     <div class="fundo">
          <!-- menu mobile-->
-     <div class="espaco-2"></div>
+     <div class="espaco-0-5"></div>
     <div class="menu-mobile">
 
     <div class="row menu-mobile">
