--- a/creditos.html
+++ b/creditos.html
@@ -71,7 +71,7 @@
 
     <div class="fundo-creditos">
          <!-- menu mobile-->
-        <div class="espaco-2"></div>
+        <div class="espaco-0-5"></div>
         <div class="menu-mobile menu-mobile-fixed">
          <div class="menu-mobile">
 
@@ -154,7 +154,7 @@
 <!--fim menu mobile-->
 
 <!--Btn voltar  superior - desktop-->
-<div class="espaco-1"> </div>
+<div class="espaco-0-5"> </div>
     <div class="row menu-desktop">
         <div id="btn-voltar-ms">
         <img class="img-voltar" src="assets/img/nav/voltar.svg" href="index.html">
