--- a/sobre-o-jogo.html
+++ b/sobre-o-jogo.html
@@ -71,7 +71,7 @@
     </div>
     <div class="fundo">
 <!-- menu mobile-->
-    <div class="espaco-1"></div>
+  <div class="espaco-0-5"> </div>
     <div class="menu-mobile">
         <div class="row menu-mobile">
             <div class="col menu-mobile">
@@ -146,7 +146,7 @@
     <!--fim menu mobile-->
 
     <!--Btn voltar  superior - desktop-->
-    <div class="espaco-1"> </div>
+    <div class="espaco-0-5"> </div>
         <div class="row menu-desktop">
             <div id="btn-voltar-ms">
             <img class="img-voltar" src="assets/img/nav/voltar.svg" href="index.html">
