Correção- voltar menu superior

--- a/creditos.html
+++ b/creditos.html
@@ -157,7 +157,9 @@
 <div class="espaco-0-5"> </div>
     <div class="row menu-desktop">
         <div id="btn-voltar-ms">
-        <img class="img-voltar" src="assets/img/nav/voltar.svg" href="index.html">
+         <a href="index.html">
+            <img class="img-voltar" src="assets/img/nav/voltar.svg">
+             </a>
         </div>
     </div>
     
